--- a/cmpe295BNew/views/Rulesengine.ejs
+++ b/cmpe295BNew/views/Rulesengine.ejs
@@ -47,13 +47,7 @@
 </head>
 
 <body>
-    <div>
-    <p id="objTemp" style='color:red'></p>
-    <p id="ambTemp" style='color:red'></p>
-    <p id="humTemp" hidden></p>
-    <p id="humidity" hidden></p>
-    <p id="Pressure" hidden></p>
-</div>
+    
     <div id="wrapper">
 
         <!-- Navigation -->
@@ -229,13 +223,10 @@
 
             </div>
             <!-- /.container-fluid -->
-
         </div>
         <!-- /#page-wrapper -->
-
   </div>
     <!-- /#wrapper -->
-
     <!-- jQuery -->
     <script src="/js/jquery.js"></script>
 
@@ -246,41 +237,63 @@ $(document).ready(function() {
     var max_fields      = 100; //maximum input boxes allowed
     var wrapper         = $(".input_fields_wrap"); //Fields wrapper
     var add_button      = $("#addrule"); //Add button ID
-
-    var x = 1; //initlal text box count
+    var j=localStorage.length;
+    console.log("j "+j);
+    var x = 1; //initial text box count
     $(add_button).click(function(e){ //on add input button click
         e.preventDefault();
        
-        var criteria=document.getElementById('criteria').value;
+        var datapoint=document.getElementById('criteria').value;
         var criteriaVal=document.getElementById('condi').value;
-        var ruleval=document.getElementById('rulevalue').value;
-        var Action=document.getElementById('actionvalue').value;
-        if(x < max_fields){ //max input box allowed
-            x++; //text box increment
-            //$(wrapper).append('<div>'+criteria+" "+ criteriaVal+" "+ ruleval+"   " +'<a href="#" class="remove_field">Remove</a><button type="submit" class="btn btn-primary">Test Rule</button></div>'); //add input box
-             $(wrapper).append('<div style="display:inline;"> <div class="col-lg-12"><div class="table-responsive"><table class="table table-hover table-striped"><thead><tr><th style="text-align: left;"></th><th style="text-align: left;"></th><th style="text-align: left;"></th><th style="text-align: left;"></th><th style="text-align: left;"></th></tr></thead><tbody><tr><td style="text-align: left;">'+criteria+'</td><td style="text-align: left;">'+criteriaVal+'</td><td style="text-align: left;">'+ruleval+'</td><td style="text-align: left; id=\'action\'">'+Action+'</td><td style="text-align: left;"><button type="submit" class="btn btn-primary" onclick="testrule()">Test Rule</button></td></tr></tbody></table></div></div><br><a style="padding-left:30px" href="#" class="remove_field">Remove</a></div>');
+        var datapoint_val=document.getElementById('rulevalue').value;
+        var trigger_action=document.getElementById('actionvalue').value;
+        if(x < max_fields){ 
+            x++; 
+             $(wrapper).append('<div style="display:inline;"><div class="col-lg-12"><div class="table-responsive"><table class="table table-condensed"><tbody><tr><td>'+datapoint+'</td><td>'+criteriaVal+'</td><td>'+datapoint_val+'</td><td id=\'action\'">'+trigger_action+'</td><td><a style="padding-left:30px" href="#" class="remove_field">Remove</a></td></tr></tbody></table></div></div></div>');
         }
+        localStorage.removeItem("debug");
+        localStorage.setItem('rule'+j,JSON.stringify([datapoint, criteriaVal, datapoint_val,trigger_action]));
+        j++;
     });
    
     $(wrapper).on("click",".remove_field", function(e){ //user click on remove text
-        e.preventDefault(); $(this).parent('div').remove(); x--;
+        e.preventDefault(); 
+        $(this).parents('tr').remove(); 
+        x--;
     })
 });
 </script>
 <script type="text/javascript">
  window.onload = function testrule(){
+     var max_fields      = 100; //maximum input boxes allowed
+     var wrapper         = $(".input_fields_wrap"); //Fields wrapper
+     localStorage.removeItem("debug");
+     console.log("localStorage length "+localStorage.length)
+     if(localStorage.length>0){
+        for(var i=1;i<=localStorage.length;i++) {   
+            var arrval=JSON.parse(localStorage.getItem("rule"+i));
+            console.log("arrval"+arrval+"  "+localStorage.getItem("rule"+i));
+             $(wrapper).append('<div style="display:inline;"> <div class="col-lg-12"><div class="table-responsive"><table class="table table-condensed"><tbody><tr><td>'+arrval[0]+'</td><td>'+arrval[1]+'</td><td>'+arrval[2]+'</td><td id=\'action\'">'+arrval[3]+'</td><td><a style="padding-left:30px" href="#" class="remove_field">Remove</a></td></tr></tbody></table></div></div></div>');    
+          
+       }
+     } 
         var criteria=document.getElementById('criteria').value;
+        console.log(criteria);
         var criteriaVal=document.getElementById('condi');
+        console.log(criteriaVal);
         var condop=criteriaVal.options[criteriaVal.selectedIndex].value;
+        console.log(condop);
         var ruleval=document.getElementById('rulevalue').value;
+        console.log(ruleval);
         var Action=document.getElementById('actionvalue').value;
+        console.log(Action);
         
-        socket.on('objTemp', function(data) {
-              if(data.objTemp>=ruleval){
-              alert('temp>rulevalue');
-               document.getElementById('action').style.color='red';
-              }
-            });
+       // socket.on('objTemp', function(data) {
+       //        if(data.objTemp>=ruleval){
+       //        alert('temp>rulevalue');
+       //         document.getElementById('action').style.color='red';
+       //        }
+       //      });
        
     // var datastr={
     //     "criteria":criteria,
